--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="hero-gradient text-white py-16 md:py-24">
         <div class="container mx-auto px-4 flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 mb-10 md:mb-0">
-                <h1 class="text-4xl md:text-5xl font-bold mb-6">Revolutionize Your Clinic's Vaccination Protocol</h1>
+                <h1 class="text-4xl md:text-5xl font-bold mb-6">Smarter Veterinary Diagnostic Testing, In Your Clinic</h1>
                 <p class="text-xl mb-8">VacciCheck provides accurate, in-clinic titer testing to determine vaccine immunity in dogs and cats—helping you make evidence-based vaccination decisions.</p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
                     <a href="#contact" class="bg-white text-blue-800 font-bold py-3 px-8 rounded-lg hover:bg-gray-100 transition duration-300 text-center cta-pulse">Request a Demo</a>
